Fix grid layout bug in Category/Mood/Strategy show pages

--- a/app/assets/stylesheets/application/pages.scss
+++ b/app/assets/stylesheets/application/pages.scss
@@ -15,12 +15,6 @@
 	}
 }
 
-#pages .page {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
-}
-
 .moment p {
 	margin : 0;
 }
